# geometry-clipmaps-demo

./: .gitignore  CMakeLists.txt  README.md
docs/: report.bib  report.tex
img/: ase_class_diagram.drawio
include/: Camera.h  Clipmap.h  ClipmapLevel.h  Constants.h  Footprint.h  FootprintVAO.h  Heightmap.h  Manager.h  NGLScene.h  Terrain.h  ViewAxis.h  WindowParams.h
shaders/: Fragment.glsl  Vertex.glsl  axis.frag.glsl  axis.geometry.glsl  axis.vert.glsl  terrain.frag.glsl  terrain.vert.glsl
src/: Camera.cpp  Clipmap.cpp  ClipmapLevel.cpp  Footprint.cpp  FootprintVAO.cpp  Heightmap.cpp  Manager.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  Terrain.cpp  ViewAxis.cpp  main.cpp
tests/: CameraTests.cpp  ClipmapLevelTests.cpp  ClipmapTests.cpp  FootprintTests.cpp  HeightmapTests.cpp  ManagerTests.cpp  TerrainTest.cpp  TerrainTests.cpp
